# LearnOpenGl

./: .gitignore  CMakeLists.txt  main.cpp  pch.h  practice.cpp  practice.h
practice/: Hello_Triangle.cpp  Hello_Triangle.h  P1_5_Shader.cpp  P1_5_Shader.h  P1_6_Texture.cpp  P1_6_Texture.h  Shader.cpp  Shader.h
practice/shader/: shader_1_6_texture.fs  shader_VAO_color.vs  shader_uniform_color.fs
